[package]
name = "probabilisticpubkey"
version = "0.1.0"
authors = ["Carlos Rodriguez-Vega <crodveg@yahoo.es>"]
edition = "2018"

[dependencies]
bitvec = "0.10.0"
failure = "0.1.5"
num-integer = "0.1"
num-traits = "0.2"
primal = "0.2"
rand = "0.6"

[dev-dependencies]
proptest = "0.8.7"

[dependencies.num-bigint]
version = "0.2.2"
features = ["rand"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]